<resources>
    <string name="app_name">LontocAugustExam2</string>

    <string name="act1">ACTIVITY 1</string>
    <string name="act2">ACTIVITY 2</string>

    <string name="screen">SCREEN 2</string>

    <string name="iron_man">"Anthony Edward 'Tony' Stark"</string>
    <string name="iron_man_des1">Iron Man</string>
    <string name="iron_man_des2">"A wealthy American business magnate, playboy, and ingenious scientist, Anthony Edward 'Tony' Stark suffers a severe chest injury during a kidnapping."</string>

    <string name="ant_man">Scott Lang</string>
    <string name="ant_man_des1">Ant-Man</string>
    <string name="ant_man_des2">An ex-convict and electronics expert hired by Stark International, which enables him to steal the Ant-Man suit from Hank Pym who had long since given up the name.</string>

    <string name="nikola_tesla">Nikola Tesla</string>
    <string name="nikola_tesla_des1">Inventor</string>
    <string name="nikola_tesla_des2">A Serbian American inventor, electrical engineer, mechanical engineer, and futurist who is best known for his contributions to the design of the modern alternating current electricity supply system.</string>

    <string name="next">NEXT</string>
    <string name="prev">PREVIOUS</string>
    <string name="map">MAP</string>

</resources>
